--- a/Экотропы_Пермь.html
+++ b/Экотропы_Пермь.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./data/icon/eco_icon.png" type="image/x-icon">
     <title>Экология и туризм Перми</title>
     <link rel="stylesheet" href="./libs/v6.12.0-dist/ol.css">
-    <link rel="stylesheet" href="./styles1.css">
+    <link rel="stylesheet" href="./Экотропы_Пермь.css">
     </head>
     <body>
         <div class="grid-2">
@@ -162,6 +162,6 @@
         
       
       <script src="https://cdn.maptiler.com/ol-mapbox-style/v5.0.2/olms.js"></script>
-      <script src='./main1.js'></script>
+      <script src='./Экотропы_Пермь.js'></script>
       <script src="./libs/proj4.js"></script>
     </body>
