--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="info-but" id="info-but" title="информация о сервисе"> <img src="data/icon/inf.png"width="20" height="20"></div>
         <div id='info-text' class="info-text">
           <h2 style='font-size:20px;font-weight:bold;'>ИНФОРМАЦИЯ О СЕРВИСЕ</h2>
-          <h2 style='font-size:18px;font-weight:100'>Данный сервис показывает инфрмацию об экологической составляющей города, прииордных особенностях, а также о туристических направлениях города.</h2>
+          <h2 style='font-size:18px;font-weight:100'>Данный сервис показывает инфрмацию об экологической составляющей города, прирордных особенностях, а также о туристических направлениях города.</h2>
         </div>
         <div class="tematic-but" id="tematic-but" title="Тематические слои"> <img src="./data/icon/layers.png"width="20" height="20"></div>
         <div class="tematic-layers" id="tematic-layers">
