--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img src="./data/icon/ocean_L.png" width="20" height="7" ><input type="checkbox" name='rasterLayerCheckBox' value='velo-p'>Действующие велодорожки<br>
         <h3>Турисические места</h3>
         <img src="./data/icon/info2.png" width="20" height="20" ><input type="checkbox" name='rasterLayerCheckBox' value='point-st'>Достопримечательности города<br> 
-        <img src="./data/icon/red_L.png" width="20" height="7" ><input type="checkbox" name='rasterLayerCheckBox' value='green-line'>Зеленая линия <br>
+        <img src="./data/icon/red_L.png" width="20" height="7" ><input type="checkbox" name='rasterLayerCheckBox' value='green-line'> Туристический маршрут <br>
         <img src="./data/icon/border1.png" width="20" height="15" ><input type="checkbox" name='rasterLayerCheckBox' value='park'>Парки города<br>
         <img src="./data/icon/border2.png" width="20" height="15" ><input type="checkbox" name='rasterLayerCheckBox' value='park-buf'>Шаговая доступность парков<br>
         <img src="./data/icon/border3.png" width="20" height="15" ><input type="checkbox" name='rasterLayerCheckBox' value='area-p'>Районы города<br>
